# crypto-wasm

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  package.json  test.html
docs/: readme.md
src/: cipher.rs  lib.rs  util.rs
