[package]
name = "xira-crypto-wasm"
version = "1.0.8"
edition = "2024"
description = "A crypto wasm package, including x25519, blake3"
repository = "https://github.com/x-ira/crypto-wasm.git"
license = "Apache-2.0"
keywords = ["curve25519", "ecdh", "ecdsa", "wasm", "blake3"]

[lib]
crate-type = ["cdylib", "rlib"]


# add following to your ~/.config/config.toml to work with `getrandom` crate
# [target.wasm32-unknown-unknown]
# rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[features]
# default = ["console_error_panic_hook"]

[dependencies]
# console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wee_alloc = { version = "0.4.5", optional = true }
rand_core = "0.9.3"
rand = { version = "0.9.2", features = ["os_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
x25519-dalek = { version = "3.0.0-pre.1", features = ["os_rng", "static_secrets"] }
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
chacha20poly1305 = { version = "0.11.0-rc.1", features = [] }

base64ct = { version = "*", features = ["alloc"] }
blake3 = "1.8.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
